# mandelbrot-visual

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/mandelbrot/: app.py  compute.py  routes.py
frontend/: .dockerignore  Dockerfile
frontend/app/: constants.ts  layout.tsx  page.tsx  types.ts
frontend/app/components/: ControlPanel.tsx  ErrorToast.tsx  LoadingIndicator.tsx  PerformanceMetrics.tsx
frontend/app/hooks/: useCanvasRenderer.ts  useMandelbrotData.ts  usePerformanceMonitor.ts  useZoomPan.ts
frontend/app/utils/: colors.ts  helpers.ts
