[tool.poetry]
name = "mandelbrot"
version = "0.1.0"
description = "Backend for a webbased mandelbrot visualizer"
authors = ["Daniel Jones"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.127.0"
uvicorn = "^0.40.0"
numba = "^0.63.1"
numpy = "2.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
